# quotatool

./: .gitignore  AUTHORS  CLAUDE.md  COPYING  ChangeLog  INSTALL  MASTERPLAN.org  Makefile  PLATFORM-CHANGES.md  README  README.md  ROADMAP.md  TODO  configure  configure.ac  configure.in  local.mk.in
man/: quotatool.8
src/: config.h.in  dir.mk  main.c  output.c  output.h  parse.c  parse.h  quota.h  quotatool.h  system.c  system.h
src/aix/: dir.mk  quota.c
src/bsd/: dir.mk  quota.c
src/darwin/: dir.mk  quota.c
src/freebsd/: dir.mk  quota.c
src/linux/: dir.mk  dqblk_old.h  dqblk_v0.h  dqblk_v1.h  dqblk_v2.h  linux_quota.h  quota.c  xfs_quota.h
src/solaris/: dir.mk  quota.c
steps/: 01-testing.org  01b-interactive.org  02a-bsd-testing.org  02b-platform-docs.org  02c-platform-drops.org  03-cleanup.org  03-xfs-grace.org
test/: DEPENDENCIES.md  check-deps.sh  guest-interactive.sh  guest-run-all.sh  run-tests  run-tests.sh
test/bsd/: DEPENDENCIES.md  check-deps.sh  guest-run-all.sh  run-tests
test/bsd/freebsd/: setup.sh
test/bsd/freebsd/cloud-init/: meta-data  user-data
test/bsd/lib/: common.sh  fs-setup.sh  vm.sh
test/bsd/openbsd/: drive-installer.py  http-responder.py  install.conf  run-install.sh  serve-install-conf.sh  setup.sh  test-quotactl.c
test/bsd/tests/: t-basic-block-limit.sh  t-basic-soft-limit.sh  t-combined-limits.sh  t-dry-run.sh  t-enforce-block-hard.sh  t-enforce-block-soft.sh  t-enforce-inode-hard.sh  t-enforce-inode-soft.sh  t-expired-grace.sh  t-grace-period.sh  t-group-quota.sh  t-inode-limits.sh  t-limit-isolation.sh  t-numeric-uid.sh  t-raise-only.sh  t-relative-adjust.sh  t-reset-limits.sh
test/kernels/: build-alpine-rootfs.sh  build-rootfs.sh  download.sh  kernels.conf  verify-boot.sh
test/kernels/initramfs/: build-busybox.sh  build.sh  init
test/lib/: boot.sh  fs-setup.sh  tap.sh  test-ids.sh
test/tests/: t-basic-block-limit.sh  t-basic-soft-limit.sh  t-combined-limits.sh  t-dry-run.sh  t-enforce-block-hard.sh  t-enforce-block-soft.sh  t-enforce-inode-hard.sh  t-enforce-inode-soft.sh  t-grace-period.sh  t-group-quota.sh  t-inode-limits.sh  t-limit-isolation.sh  t-numeric-uid.sh  t-raise-only.sh  t-relative-adjust.sh  t-reset-limits.sh
test/tests/host/: guest-run-host-tests.sh  t-dump-format.sh  t-error-args.sh  t-parse-timespan.sh  t-parse-units.sh
tools/: config.sub  depend.sh
